# botutils

./: CMakeLists.txt  readme.md
example/: CMakeLists.txt  example_rate.cpp  example_timer.cpp  fixed_interval_cycle.cc
src/: CMakeLists.txt  performance_measurement.cc  performance_measurement.h  timer.cc  timer.h
src/filter/: CMakeLists.txt  kalman_filter.cc  kalman_filter.h  lowpass_filter.cc  lowpass_filter.h
src/quaternion_estimator/: CMakeLists.txt  quaternion_estimator.cc  quaternion_estimator.h  quatfrom6a.c  quatfrom6a.h  quatfrom6a_test.c
test/: CMakeLists.txt  kalman_filter_test.cc  lowpass_filter_test.cc  performance_measurement_test.cc  quaternion_estimator_test.cc  rate_test.cc  timer_test.cc
